--- a/AdditionalActivities/AdditionalActivities.csproj
+++ b/AdditionalActivities/AdditionalActivities.csproj
@@ -62,7 +62,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\ScreenFlowMediator.cs" />
+    <Compile Include="Model\Activity.cs" />
+    <Compile Include="Model\ActivityCategory.cs" />
+    <Compile Include="Model\ActivityItem.cs" />
+    <Compile Include="Model\ActivityPortfolio.cs" />
     <Compile Include="Model\IDatabaseObject.cs" />
+    <Compile Include="Model\Rule.cs" />
+    <Compile Include="Model\Student.cs" />
     <Compile Include="Supporting Files\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\StartForm.cs">
