--- a/AdditionalActivities/AdditionalActivities.csproj
+++ b/AdditionalActivities/AdditionalActivities.csproj
@@ -74,11 +74,71 @@
     <Compile Include="Model\Student.cs" />
     <Compile Include="Supporting Files\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\StartForm.cs">
+    <Compile Include="View\Controls\Details\Cells\LabeledControlCellControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Details\Cells\LabeledControlCellControl.Designer.cs">
+      <DependentUpon>LabeledControlCellControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Details\DetailsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Details\DetailsControl.Designer.cs">
+      <DependentUpon>DetailsControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\MainMenuControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\MainMenuControl.Designer.cs">
+      <DependentUpon>MainMenuControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\Filtering\FilterControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\Filtering\FilterControl.Designer.cs">
+      <DependentUpon>FilterControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\Filtering\OrderControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\Filtering\OrderControl.Designer.cs">
+      <DependentUpon>OrderControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\Filtering\SegmentedControlCellControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\Filtering\SegmentedControlCellControl.Designer.cs">
+      <DependentUpon>SegmentedControlCellControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\SimpleNavigationCellControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Cells\SimpleNavigationCellControl.Designer.cs">
+      <DependentUpon>SimpleNavigationCellControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Headers\MultiSelectionNavigationHeaderControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Headers\MultiSelectionNavigationHeaderControl.Designer.cs">
+      <DependentUpon>MultiSelectionNavigationHeaderControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Headers\NavigationSearchHeaderControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\Headers\NavigationSearchHeaderControl.Designer.cs">
+      <DependentUpon>NavigationSearchHeaderControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\NavigationControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Navigation\NavigationControl.Designer.cs">
+      <DependentUpon>NavigationControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\StartForm.Designer.cs">
-      <DependentUpon>StartForm.cs</DependentUpon>
+    <Compile Include="View\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -89,8 +149,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="View\StartForm.resx">
-      <DependentUpon>StartForm.cs</DependentUpon>
+    <EmbeddedResource Include="View\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
@@ -118,6 +178,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
