--- a/AdditionalActivities/AdditionalActivities.csproj
+++ b/AdditionalActivities/AdditionalActivities.csproj
@@ -65,13 +65,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\ModelMediator.cs" />
-    <Compile Include="Model\Activity.cs" />
-    <Compile Include="Model\ActivityCategory.cs" />
-    <Compile Include="Model\ActivityItem.cs" />
-    <Compile Include="Model\ActivityPortfolio.cs" />
-    <Compile Include="Model\IModel.cs" />
-    <Compile Include="Model\Rule.cs" />
-    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\FieldModel.cs" />
+    <Compile Include="Model\Persistent\Activity.cs" />
+    <Compile Include="Model\Persistent\ActivityCategory.cs" />
+    <Compile Include="Model\Persistent\ActivityItem.cs" />
+    <Compile Include="Model\Persistent\ActivityPortfolio.cs" />
+    <Compile Include="Model\FilterOrderCriteria.cs" />
+    <Compile Include="Model\Persistent\IPersistentObjectModel.cs" />
+    <Compile Include="Model\Persistent\PersistentObjectModelType.cs" />
+    <Compile Include="Model\Persistent\Rule.cs" />
+    <Compile Include="Model\Persistent\Student.cs" />
     <Compile Include="Supporting Files\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Controls\Cells\ICell.cs" />
