--- a/AdditionalActivities/AdditionalActivities.csproj
+++ b/AdditionalActivities/AdditionalActivities.csproj
@@ -65,8 +65,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\ModelMediator.cs" />
-    <Compile Include="Controller\ViewMediator.cs" />
-    <Compile Include="Model\FieldModel.cs" />
     <Compile Include="Model\Persistent\Activity.cs" />
     <Compile Include="Model\Persistent\ActivityCategory.cs" />
     <Compile Include="Model\Persistent\ActivityItem.cs" />
@@ -77,24 +75,80 @@
     <Compile Include="Model\Persistent\Student.cs" />
     <Compile Include="Supporting Files\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\Controls\Cells\ICell.cs" />
-    <Compile Include="View\Controls\Cells\LabeledControlCell.cs">
+    <Compile Include="View\Controls\CRUDs\ActivityCrud.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\Cells\LabeledControlCell.Designer.cs">
-      <DependentUpon>LabeledControlCell.cs</DependentUpon>
+    <Compile Include="View\Controls\CRUDs\ActivityCrud.Designer.cs">
+      <DependentUpon>ActivityCrud.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Controls\Cells\SegmentedControlCell.cs">
+    <Compile Include="View\Controls\CRUDs\ActivityItemCrud.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\Cells\SegmentedControlCell.Designer.cs">
+    <Compile Include="View\Controls\CRUDs\ActivityItemCrud.Designer.cs">
+      <DependentUpon>ActivityItemCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\ActivityPortfolioCrud.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\ActivityPortfolioCrud.Designer.cs">
+      <DependentUpon>ActivityPortfolioCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\CourseCrud.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\CourseCrud.Designer.cs">
+      <DependentUpon>CourseCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\RuleCrud.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\RuleCrud.Designer.cs">
+      <DependentUpon>RuleCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\StudentCrud.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\CRUDs\StudentCrud.Designer.cs">
+      <DependentUpon>StudentCrud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\DashboardScreen.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\DashboardScreen.Designer.cs">
+      <DependentUpon>DashboardScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Details\ActivityDet.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Details\ActivityDet.Designer.cs">
+      <DependentUpon>ActivityDet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Details\ActivityItemDet.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Details\ActivityItemDet.Designer.cs">
+      <DependentUpon>ActivityItemDet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Details\ActivityPortfolioDet.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Details\ActivityPortfolioDet.Designer.cs">
+      <DependentUpon>ActivityPortfolioDet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\Details\CourseDet.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\Details\CourseDet.Designer.cs">
+      <DependentUpon>CourseDet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\FilterOrder\OrderControl.Designer.cs">
+      <DependentUpon>OrderControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Controls\FilterOrder\SegmentedControlCell.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Controls\FilterOrder\SegmentedControlCell.Designer.cs">
       <DependentUpon>SegmentedControlCell.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\Controls\Cells\SimpleCell.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\Controls\Cells\SimpleCell.Designer.cs">
-      <DependentUpon>SimpleCell.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Controls\FilterOrder\FilterControl.cs">
       <SubType>UserControl</SubType>
@@ -106,51 +160,29 @@
     <Compile Include="View\Controls\FilterOrder\OrderControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\FilterOrder\OrderControl.Designer.cs">
-      <DependentUpon>OrderControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\Controls\Headers\DetailsEditingHeader.cs">
+    <Compile Include="View\Controls\FilterOrder\FilterOrderTableControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\Headers\DetailsEditingHeader.Designer.cs">
-      <DependentUpon>DetailsEditingHeader.cs</DependentUpon>
+    <Compile Include="View\Controls\FilterOrder\FilterOrderTableControl.Designer.cs">
+      <DependentUpon>FilterOrderTableControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Controls\Headers\DetailsHeader.cs">
+    <Compile Include="View\Controls\Details\RuleDet.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\Headers\DetailsHeader.Designer.cs">
-      <DependentUpon>DetailsHeader.cs</DependentUpon>
+    <Compile Include="View\Controls\Details\RuleDet.Designer.cs">
+      <DependentUpon>RuleDet.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Controls\Headers\FilterOrderHeader.cs">
+    <Compile Include="View\Controls\SettingsScreen.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\Headers\FilterOrderHeader.Designer.cs">
-      <DependentUpon>FilterOrderHeader.cs</DependentUpon>
+    <Compile Include="View\Controls\SettingsScreen.Designer.cs">
+      <DependentUpon>SettingsScreen.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Controls\Headers\IHeader.cs" />
-    <Compile Include="View\Controls\Headers\MultiSelectionHeader.cs">
+    <Compile Include="View\Controls\Details\StudentDet.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\Controls\Headers\MultiSelectionHeader.Designer.cs">
-      <DependentUpon>MultiSelectionHeader.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\Controls\Headers\SearchHeader.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\Controls\Headers\SearchHeader.Designer.cs">
-      <DependentUpon>SearchHeader.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\Controls\MainMenuControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\Controls\MainMenuControl.Designer.cs">
-      <DependentUpon>MainMenuControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\Controls\TableControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="View\Controls\TableControl.Designer.cs">
-      <DependentUpon>TableControl.cs</DependentUpon>
+    <Compile Include="View\Controls\Details\StudentDet.Designer.cs">
+      <DependentUpon>StudentDet.cs</DependentUpon>
     </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
@@ -158,11 +190,11 @@
     <Compile Include="View\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\PlaceholderUI.cs">
+    <Compile Include="View\Controls\AboutScreen.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\PlaceholderUI.Designer.cs">
-      <DependentUpon>PlaceholderUI.cs</DependentUpon>
+    <Compile Include="View\Controls\AboutScreen.Designer.cs">
+      <DependentUpon>AboutScreen.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -174,14 +206,26 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\Controls\Cells\LabeledControlCell.resx">
-      <DependentUpon>LabeledControlCell.cs</DependentUpon>
+    <EmbeddedResource Include="View\Controls\CRUDs\ActivityCrud.resx">
+      <DependentUpon>ActivityCrud.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\Cells\SegmentedControlCell.resx">
+    <EmbeddedResource Include="View\Controls\CRUDs\ActivityItemCrud.resx">
+      <DependentUpon>ActivityItemCrud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\CRUDs\ActivityPortfolioCrud.resx">
+      <DependentUpon>ActivityPortfolioCrud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\CRUDs\CourseCrud.resx">
+      <DependentUpon>CourseCrud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\CRUDs\RuleCrud.resx">
+      <DependentUpon>RuleCrud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\CRUDs\StudentCrud.resx">
+      <DependentUpon>StudentCrud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Controls\FilterOrder\SegmentedControlCell.resx">
       <DependentUpon>SegmentedControlCell.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\Cells\SimpleCell.resx">
-      <DependentUpon>SimpleCell.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Controls\FilterOrder\FilterControl.resx">
       <DependentUpon>FilterControl.cs</DependentUpon>
@@ -189,32 +233,14 @@
     <EmbeddedResource Include="View\Controls\FilterOrder\OrderControl.resx">
       <DependentUpon>OrderControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\Headers\DetailsEditingHeader.resx">
-      <DependentUpon>DetailsEditingHeader.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\Headers\DetailsHeader.resx">
-      <DependentUpon>DetailsHeader.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\Headers\FilterOrderHeader.resx">
-      <DependentUpon>FilterOrderHeader.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\Headers\MultiSelectionHeader.resx">
-      <DependentUpon>MultiSelectionHeader.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\Headers\SearchHeader.resx">
-      <DependentUpon>SearchHeader.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\MainMenuControl.resx">
-      <DependentUpon>MainMenuControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\Controls\TableControl.resx">
-      <DependentUpon>TableControl.cs</DependentUpon>
+    <EmbeddedResource Include="View\Controls\FilterOrder\FilterOrderTableControl.resx">
+      <DependentUpon>FilterOrderTableControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\PlaceholderUI.resx">
-      <DependentUpon>PlaceholderUI.cs</DependentUpon>
+    <EmbeddedResource Include="View\Controls\AboutScreen.resx">
+      <DependentUpon>AboutScreen.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
@@ -228,10 +254,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\AddAct icon.jpg" />
     <None Include="Resources\AddAct icon.png" />
-    <None Include="Resources\ic_keyboard_arrow_down_black_24dp.png" />
-    <None Include="Resources\ic_keyboard_arrow_right_black_24dp.png" />
     <Content Include="Supporting Files\AddAct icon.ico" />
   </ItemGroup>
   <ItemGroup>
