Reestructured to work with "working copies" of domain objects ActivityDetScreen as template/example of bindings and working copy structure

--- a/AdditionalActivities/AdditionalActivities.csproj
+++ b/AdditionalActivities/AdditionalActivities.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Model\Domain\Activity.cs" />
     <Compile Include="Model\Domain\ActivityCategory.cs" />
     <Compile Include="Model\Domain\Course.cs" />
+    <Compile Include="Model\Domain\DomainObject.cs" />
     <Compile Include="Model\Domain\Evaluator.cs" />
     <Compile Include="Model\Domain\Period.cs" />
     <Compile Include="Model\Domain\Rule.cs" />
